# backend/app/api/handlers/v1/v1_ctrl_actions.go
@@ -1,8 +1,10 @@
 package v1
 
 import (
+	"context"
 	"net/http"
 
+	"github.com/google/uuid"
 	"github.com/rs/zerolog/log"
 	"github.com/thechosenlan/homebox/backend/internal/core/services"
 	"github.com/thechosenlan/homebox/backend/internal/sys/validate"
@@ -13,6 +15,20 @@ type ActionAmountResult struct {
 	Completed int `json:"completed"`
 }
 
+func actionHandlerFactory(ref string, fn func(context.Context, uuid.UUID) (int, error)) server.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) error {
+		ctx := services.NewContext(r.Context())
+
+		totalCompleted, err := fn(ctx, ctx.GID)
+		if err != nil {
+			log.Err(err).Str("action_ref", ref).Msg("failed to run action")
+			return validate.NewRequestError(err, http.StatusInternalServerError)
+		}
+
+		return server.Respond(w, http.StatusOK, ActionAmountResult{Completed: totalCompleted})
+	}
+}
+
 // HandleGroupInvitationsCreate godoc
 // @Summary  Ensures all items in the database have an asset id
 // @Tags     Group
@@ -21,17 +37,18 @@ type ActionAmountResult struct {
 // @Router   /v1/actions/ensure-asset-ids [Post]
 // @Security Bearer
 func (ctrl *V1Controller) HandleEnsureAssetID() server.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) error {
-		ctx := services.NewContext(r.Context())
+	return actionHandlerFactory("ensure asset IDs", ctrl.svc.Items.EnsureAssetID)
+}
 
-		totalCompleted, err := ctrl.svc.Items.EnsureAssetID(ctx, ctx.GID)
-		if err != nil {
-			log.Err(err).Msg("failed to ensure asset id")
-			return validate.NewRequestError(err, http.StatusInternalServerError)
-		}
-
-		return server.Respond(w, http.StatusOK, ActionAmountResult{Completed: totalCompleted})
-	}
+// HandleEnsureImportRefs godoc
+// @Summary  Ensures all items in the database have an import ref
+// @Tags     Group
+// @Produce  json
+// @Success  200     {object} ActionAmountResult
+// @Router   /v1/actions/ensure-import-refs [Post]
+// @Security Bearer
+func (ctrl *V1Controller) HandleEnsureImportRefs() server.HandlerFunc {
+	return actionHandlerFactory("ensure import refs", ctrl.svc.Items.EnsureImportRef)
 }
 
 // HandleItemDateZeroOut godoc
@@ -42,15 +59,5 @@ func (ctrl *V1Controller) HandleEnsureAssetID() server.HandlerFunc {
 // @Router   /v1/actions/zero-item-time-fields [Post]
 // @Security Bearer
 func (ctrl *V1Controller) HandleItemDateZeroOut() server.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) error {
-		ctx := services.NewContext(r.Context())
-
-		totalCompleted, err := ctrl.repo.Items.ZeroOutTimeFields(ctx, ctx.GID)
-		if err != nil {
-			log.Err(err).Msg("failed to ensure asset id")
-			return validate.NewRequestError(err, http.StatusInternalServerError)
-		}
-
-		return server.Respond(w, http.StatusOK, ActionAmountResult{Completed: totalCompleted})
-	}
+	return actionHandlerFactory("zero out date time", ctrl.repo.Items.ZeroOutTimeFields)
 }
