# backend/app/api/static/docs/swagger.yaml
@@ -640,6 +640,20 @@ paths:
       summary: Ensures all items in the database have an asset id
       tags:
       - Group
+  /v1/actions/ensure-import-refs:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.ActionAmountResult'
+      security:
+      - Bearer: []
+      summary: Ensures all items in the database have an import ref
+      tags:
+      - Group
   /v1/actions/zero-item-time-fields:
     post:
       produces:
@@ -1095,6 +1109,18 @@ paths:
       summary: Update Maintenance Entry
       tags:
       - Maintenance
+  /v1/items/export:
+    get:
+      responses:
+        "200":
+          description: text/csv
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: exports items into the database
+      tags:
+      - Items
   /v1/items/fields:
     get:
       produces:
